compiler/testData/diagnostics/tests/resolve/dslMarker/inheritedMarker.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
@DslMarker
annotation class Ann

@Ann
interface Common
interface C : Common
interface D : C

class A : C {
    fun a() = 1
}

class B : D {
    fun b() = 2
}

fun foo(x: A.() -> Unit) {}
fun bar(x: B.() -> Unit) {}

fun test() {
    foo {
        a()
        bar {
            <!DSL_SCOPE_VIOLATION!>a<!>()
            this@foo.a()
            b()
        }
    }
}
